<resources>
    <string name="app_name">SmartContactsAgenda</string>
    <string name="button_login">Login</string>
    <string name="label_email">E-mail</string>
    <string name="label_password">Senha</string>
    <string name="header_new_user">Novo Usuário</string>
    <string name="label_name">Nome</string>
    <string name="button_create_account">Criar Conta</string>
    <string name="label_new_account">Ainda não tem conta? Crie uma</string>
    <string name="label_add_contact">Adicionar Contato</string>
    <string name="label_remove_contact">Remover Contato</string>
    <string name="label_edit_contact">Editar Contado</string>
    <string name="label_about_contact">Sobre</string>
    <string name="label_list_contact">Listar Contatos</string>
</resources>
